--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 MONGODB_BASE_URL=mongodb://127.0.0.1:27017/Trucker?retryWrites=false
-MONGODB_BASE_URL_WAIT=mongodb+srv://SKadmin:SKpass@syndikit.lxf9l3k.mongodb.net/Trucker?retryWrites=true&w=majority
+MONGODB_BASE_URL_WAIT=mongodb+srv://TruckerUser:TruckerPassw0rd@syndikit.lxf9l3k.mongodb.net/Trucker?retryWrites=true&w=majority
 PORT=5000
 
 SESSION_SECRET=0Ms5?4cd-92n/.6ssuj5!4:
